--- a/deps/tokenizers2c/Cargo.toml
+++ b/deps/tokenizers2c/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["staticlib"]
 
 [dependencies]
 libc = "0.2.142"
-tokenizers = {version = "0.13.3", default-features = false, features = ["onig"]}
+tokenizers = {version = "0.13.3", default-features = false, features = ["unstable_wasm"]}
 
 [profile.release]
 strip = true
